--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 li {
