--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ body {
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -moz-tap-highlight-color: transparent;
+    -o-tap-highlight-color: transparent;
+
 }
 
 li {
