--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
     -webkit-tap-highlight-color: transparent;
     -moz-tap-highlight-color: transparent;
     -o-tap-highlight-color: transparent;
-
+    background-color: #f5f5f5;
 }
 
 li {
