--- a/src/css/form.css
+++ b/src/css/form.css
@@ -3,23 +3,23 @@
     display: flex;
     justify-content: center;
     margin-top: 25px;
-
 }
 
 form {
     display: flex;
     flex-direction: column;
-    border: 1px solid #ededed;
     padding: 15px 10px;
     width: 90%;
     max-width: 380px;
     border-radius: 3px;
     height: auto;
+    background-color: #ffffff;
 }
 
 label {
     font-size: smaller;
     font-weight: lighter;
+    color: gray;
 }
 
 input[type=text] {
