--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -18,7 +18,7 @@
 
 }
 
-.leftbar-container .nav-links li {
+.leftbar-container .nav-links a {
   display: block;
   width: 100%;
   padding: 10px 25px;
@@ -29,7 +29,7 @@
   text-align: left;
 }
 
-.leftbar-container .nav-links li:not(.active):hover {
+.leftbar-container .nav-links a:not(.active):hover {
   background-color: #f5f5f5;
   border-radius: 8px;
 }
