--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -8,7 +8,10 @@
 .leftbar-container {
   width: 150px;
   background-color: #fff;
-
+  height: 100vh;
+  position: fixed;
+  top: 50px;
+  border: 10px;
 }
 
 .leftbar-container .nav-links {
@@ -41,15 +44,14 @@
 
 /* left bar ends */
 .grid-container {
-  width: 100;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr;
   gap: 15px;
   padding-inline: 10px;
   padding-block: 5px;
-
-  flex-grow: 1;
-
+  flex: 1;
+  margin-left: 150px;
 }
 
 .palette-container {
@@ -94,9 +96,7 @@
 }
 
 .palette {
-  aspect-ratio: 1/1;
-  height: 100%;
-  width: 100%;
+  aspect-ratio: 1;
   border-radius: 15px;
   overflow: hidden;
 }
@@ -155,14 +155,17 @@
 
 @media (max-width:700px) {
   .grid-container {
-    padding-bottom: 60px
+    padding-bottom: 60px;
+    margin-left: 0;
   }
 
   .leftbar-container {
     position: fixed;
+    top: auto;
     bottom: 0;
     width: 100%;
     border-top: 1px solid #f2f2f2;
+    height: fit-content;
   }
 
   .leftbar-container .nav-links {
